policygenerator/policy-sets/community/kyverno/multitenancy/input/disallowplacementrules/disallow-placementRules.yaml
# WARNING: ClusterPolicy was DEPRECATED in Kyverno v1.17
# To update your policy, browse the official Kyverno policy collection
# for current examples: https://kyverno.io/policies

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-placementrules
spec:
  validationFailureAction: audit
  background: false
  rules:
    - name: disallow-placementrules
      match:
        resources:
          kinds:
            - apps.open-cluster-management.io/v1/PlacementRule
      validate:
        message: "Using Placement Rules not allowed"
        deny: {}
